--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jarah's Construction Services</title>
+  <title>AP Electrical and Construction Services</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -109,7 +109,7 @@
 <body>
 
 <header>
-  <h1>Jarah's Construction Services</h1>
+  <h1>AP Electrical and Construction Services</h1>
   <p>Woodworking, Welding, Electrical & Construction Planning</p>
 </header>
 
@@ -139,8 +139,8 @@
   </section>
 
   <section id="about">
-    <h2>About Jarah</h2>
-    <p>With years of hands-on experience in woodworking, welding, electrical works, and construction planning, Jarah offers personalized and quality services tailored to your home needs. Committed to professionalism and customer satisfaction.</p>
+    <h2>About AP Electrical</h2>
+    <p>With years of hands-on experience in woodworking, welding, electrical works, and construction planning, AP Electrical and Contrucation Services offers personalized and quality services tailored to your home needs. Committed to professionalism and customer satisfaction.</p>
   </section>
 
   <section id="portfolio">
@@ -175,7 +175,7 @@
 </div>
 
 <footer>
-  &copy; 2025 Jarah's Construction Services. All rights reserved.
+  &copy; 2025 AP Electrical and Construction Services. All rights reserved.
 </footer>
 
 </body>
@@ -183,10 +183,3 @@
 
 
 
-echo "# Website" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/patrickAP96/Website.git
-git push -u origin main
