--- a/index.html
+++ b/index.html
@@ -13,10 +13,32 @@
       background: #f9f9f9;
     }
     header {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       background: #004080;
       color: #fff;
-      padding: 20px 0;
-      text-align: center;
+      padding: 20px 20px;
+      gap: 20px;
+      text-align: left;
+    }
+    .logo {
+      height: 160px; /* adjust logo height as needed */
+      width: auto;
+    }
+    .header-text {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    /* Bigger company name and tighter spacing */
+    .header-text h1 {
+      font-size: 2.5rem;
+      margin-bottom: 4px;
+    }
+    .header-text p {
+      margin-top: 0;
     }
     nav {
       background: #003366;
@@ -43,7 +65,7 @@
     h2 {
       color: #004080;
       border-bottom: 2px solid #004080;
-      padding-bottom: 5px;
+      padding-bottom: 1px;
     }
     section {
       margin-bottom: 40px;
@@ -96,6 +118,33 @@
       color: white;
       font-size: 14px;
     }
+    /* Products section styling */
+    .products-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      margin-top: 15px;
+    }
+    .product-item {
+      background: #f4f4f4;
+      border-radius: 6px;
+      padding: 15px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .product-item img {
+      width: 100%;
+      height: auto;
+      border-radius: 4px;
+    }
+    .product-item h3 {
+      margin: 10px 0 8px;
+      color: #004080;
+    }
+    .product-item p {
+      font-size: 0.9rem;
+      color: #333;
+    }
     @media (max-width: 600px) {
       nav {
         flex-direction: column;
@@ -109,13 +158,18 @@
 <body>
 
 <header>
-  <h1>AP Electrical and Construction Services</h1>
-  <p>Woodworking, Welding, Electrical & Construction Planning</p>
+  <img src="Logo new.jpg" alt="AP Electrical Logo" class="logo" />
+
+  <div class="header-text">
+    <h1>AP Electrical and Construction Services</h1>
+    <p>Woodworking, Welding Works, Electrical Installation / Troubleshooting & Construction Design / Planning</p>
+  </div>
 </header>
 
 <nav>
   <a href="#home">Home</a>
   <a href="#services">Services</a>
+  <a href="#products">Products</a>
   <a href="#about">About</a>
   <a href="#portfolio">Portfolio</a>
   <a href="#contact">Contact</a>
@@ -138,6 +192,27 @@
     </ul>
   </section>
 
+  <section id="products">
+    <h2>Our Products</h2>
+    <div class="products-grid">
+      <div class="product-item">
+        <img src="https://via.placeholder.com/300x200?text=Custom+Wooden+Table" alt="Custom Wooden Table" />
+        <h3>Custom Wooden Table</h3>
+        <p>Handcrafted tables made from premium wood, tailored to your design preferences.</p>
+      </div>
+      <div class="product-item">
+        <img src="https://via.placeholder.com/300x200?text=Welded+Gate" alt="Welded Gate" />
+        <h3>Welded Gates</h3>
+        <p>Durable and stylish gates designed to enhance your property’s security and curb appeal.</p>
+      </div>
+      <div class="product-item">
+        <img src="https://via.placeholder.com/300x200?text=LED+Lighting+Installation" alt="LED Lighting Installation" />
+        <h3>LED Lighting Installation</h3>
+        <p>Energy-efficient lighting solutions that brighten your home or workspace.</p>
+      </div>
+    </div>
+  </section>
+
   <section id="about">
     <h2>About AP Electrical</h2>
     <p>With years of hands-on experience in woodworking, welding, electrical works, and construction planning, AP Electrical and Contrucation Services offers personalized and quality services tailored to your home needs. Committed to professionalism and customer satisfaction.</p>
@@ -155,7 +230,7 @@
 
   <section id="contact">
     <h2>Contact Us</h2>
-    <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+    <form action="mailto:sales.eices@gmail.com" method="post" enctype="text/plain">
       <label for="name">Name</label>
       <input type="text" id="name" name="name" required />
 
@@ -180,6 +255,3 @@
 
 </body>
 </html>
-
-
-
