--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AP Electrical and Construction Services</title>
   <style>
+    /* Reset some default */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -13,59 +17,75 @@
       background: #f9f9f9;
     }
     header {
-      display: flex;
-      align-items: center;
-      justify-content: center;
       background: #004080;
       color: #fff;
-      padding: 20px 20px;
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
       gap: 20px;
-      text-align: left;
+      flex-wrap: wrap;
+      text-align: center;
+      justify-content: center;
     }
     .logo {
-      height: 160px; /* adjust logo height as needed */
+      max-height: 100px; /* Reduced for mobile friendliness */
       width: auto;
+      flex-shrink: 0;
     }
     .header-text {
-      flex-grow: 1;
+      flex: 1 1 300px; /* grow and shrink with minimum width */
       display: flex;
       flex-direction: column;
       justify-content: center;
+      min-width: 250px;
     }
-    /* Bigger company name and tighter spacing */
     .header-text h1 {
-      font-size: 2.5rem;
-      margin-bottom: 4px;
+      font-size: 1.8rem;
+      margin: 0 0 6px 0;
+      line-height: 1.1;
     }
     .header-text p {
-      margin-top: 0;
+      margin: 0;
+      font-size: 1rem;
+      line-height: 1.3;
     }
     nav {
       background: #003366;
       display: flex;
       justify-content: center;
-      padding: 10px 0;
+      flex-wrap: wrap;
+      padding: 10px 5px;
+      gap: 10px;
     }
     nav a {
       color: white;
-      margin: 0 15px;
+      padding: 8px 15px;
       text-decoration: none;
       font-weight: bold;
-      transition: color 0.3s ease;
+      border-radius: 4px;
+      transition: background-color 0.3s ease, color 0.3s ease;
+      white-space: nowrap;
     }
-    nav a:hover {
-      color: #ffcc00;
+    nav a:hover,
+    nav a:focus {
+      background-color: #ffcc00;
+      color: #003366;
+      outline: none;
     }
     .container {
       max-width: 1000px;
-      margin: auto;
-      padding: 20px;
+      margin: 20px auto;
+      padding: 0 15px 40px;
       background: white;
+      border-radius: 6px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     h2 {
       color: #004080;
       border-bottom: 2px solid #004080;
-      padding-bottom: 1px;
+      padding-bottom: 4px;
+      margin-bottom: 15px;
+      font-size: 1.6rem;
     }
     section {
       margin-bottom: 40px;
@@ -73,47 +93,62 @@
     ul {
       list-style-type: square;
       padding-left: 20px;
+      margin: 0;
     }
     .portfolio-images {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 15px;
     }
     .portfolio-images img {
       width: 100%;
       height: auto;
-      border-radius: 4px;
+      border-radius: 6px;
       box-shadow: 0 0 6px rgba(0,0,0,0.1);
+      display: block;
     }
     form label {
       display: block;
-      margin-top: 10px;
+      margin-top: 15px;
       font-weight: bold;
+      font-size: 1rem;
     }
     form input, form textarea {
       width: 100%;
-      padding: 8px;
-      margin-top: 5px;
+      padding: 10px 12px;
+      margin-top: 6px;
       border: 1px solid #ccc;
-      border-radius: 3px;
+      border-radius: 4px;
       box-sizing: border-box;
+      font-size: 1rem;
+      font-family: inherit;
+      resize: vertical;
     }
     form button {
-      margin-top: 15px;
-      padding: 10px 15px;
+      margin-top: 20px;
+      padding: 12px 20px;
       background: #004080;
       color: white;
       border: none;
-      border-radius: 3px;
+      border-radius: 4px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+      width: 100%;
+      max-width: 300px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
-    form button:hover {
+    form button:hover,
+    form button:focus {
       background: #00264d;
+      outline: none;
     }
     footer {
       text-align: center;
-      padding: 15px 0;
+      padding: 20px 15px;
       background: #003366;
       color: white;
       font-size: 14px;
@@ -121,36 +156,77 @@
     /* Products section styling */
     .products-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 20px;
       margin-top: 15px;
     }
     .product-item {
       background: #f4f4f4;
-      border-radius: 6px;
+      border-radius: 8px;
       padding: 15px;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      height: 100%;
     }
     .product-item img {
       width: 100%;
       height: auto;
-      border-radius: 4px;
+      border-radius: 6px;
+      margin-bottom: 10px;
+      flex-shrink: 0;
     }
     .product-item h3 {
       margin: 10px 0 8px;
       color: #004080;
+      font-size: 1.2rem;
     }
     .product-item p {
-      font-size: 0.9rem;
+      font-size: 1rem;
       color: #333;
+      flex-grow: 1;
     }
-    @media (max-width: 600px) {
+
+    /* Responsive adjustments */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        text-align: center;
+        padding: 20px 15px;
+      }
+      .logo {
+        max-height: 120px;
+      }
+      .header-text h1 {
+        font-size: 1.6rem;
+      }
+      .header-text p {
+        font-size: 0.95rem;
+      }
+    }
+    @media (max-width: 480px) {
       nav {
         flex-direction: column;
+        gap: 8px;
+        padding: 15px 10px;
       }
       nav a {
-        margin: 10px 0;
+        margin: 0;
+        padding: 12px 10px;
+        font-size: 1.1rem;
+        border-radius: 6px;
+      }
+      .container {
+        margin: 15px 10px 30px;
+        padding: 15px;
+      }
+      h2 {
+        font-size: 1.4rem;
+      }
+      form button {
+        max-width: 100%;
       }
     }
   </style>
@@ -167,22 +243,22 @@
 </header>
 
 <nav>
-  <a href="#home">Home</a>
-  <a href="#services">Services</a>
-  <a href="#products">Products</a>
-  <a href="#about">About</a>
-  <a href="#portfolio">Portfolio</a>
-  <a href="#contact">Contact</a>
+  <a href="#home" tabindex="1">Home</a>
+  <a href="#services" tabindex="2">Services</a>
+  <a href="#products" tabindex="3">Products</a>
+  <a href="#about" tabindex="4">About</a>
+  <a href="#portfolio" tabindex="5">Portfolio</a>
+  <a href="#contact" tabindex="6">Contact</a>
 </nav>
 
 <div class="container">
 
-  <section id="home">
+  <section id="home" tabindex="7">
     <h2>Welcome</h2>
     <p>Providing quality craftsmanship and reliable home improvement services in Naic, Cavite. Whether you need custom woodworking, welding, electrical installations, or construction planning, we are your trusted partner.</p>
   </section>
 
-  <section id="services">
+  <section id="services" tabindex="8">
     <h2>Our Services</h2>
     <ul>
       <li>Custom Woodworking: Furniture, cabinets, shelves</li>
@@ -192,7 +268,7 @@
     </ul>
   </section>
 
-  <section id="products">
+  <section id="products" tabindex="9">
     <h2>Our Products</h2>
     <div class="products-grid">
       <div class="product-item">
@@ -213,12 +289,12 @@
     </div>
   </section>
 
-  <section id="about">
+  <section id="about" tabindex="10">
     <h2>About AP Electrical</h2>
-    <p>With years of hands-on experience in woodworking, welding, electrical works, and construction planning, AP Electrical and Contrucation Services offers personalized and quality services tailored to your home needs. Committed to professionalism and customer satisfaction.</p>
+    <p>With years of hands-on experience in woodworking, welding, electrical works, and construction planning, AP Electrical and Construction Services offers personalized and quality services tailored to your home needs. Committed to professionalism and customer satisfaction.</p>
   </section>
 
-  <section id="portfolio">
+  <section id="portfolio" tabindex="11">
     <h2>Portfolio</h2>
     <div class="portfolio-images">
       <img src="https://via.placeholder.com/400x300?text=Woodworking+Project" alt="Woodworking Project" />
@@ -228,20 +304,20 @@
     </div>
   </section>
 
-  <section id="contact">
+  <section id="contact" tabindex="12">
     <h2>Contact Us</h2>
-    <form action="mailto:sales.eices@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:sales.eices@gmail.com" method="post" enctype="text/plain" novalidate>
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" required />
+      <input type="text" id="name" name="name" required placeholder="Your full name" />
 
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" required />
+      <input type="email" id="email" name="email" required placeholder="example@domain.com" />
 
       <label for="phone">Phone</label>
-      <input type="tel" id="phone" name="phone" />
+      <input type="tel" id="phone" name="phone" placeholder="Optional" />
 
       <label for="message">Message</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
+      <textarea id="message" name="message" rows="5" required placeholder="Write your message here"></textarea>
 
       <button type="submit">Send Message</button>
     </form>
