--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       padding: 15px 20px;
       display: flex;
       align-items: center;
-      gap: 20px;
+      gap: 8px; /* reduced gap from 20px to 8px */
       flex-wrap: wrap;
       text-align: center;
       justify-content: center;
