--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AP Electrical and Construction Services</title>
   <style>
-    /* Reset some default */
     *, *::before, *::after {
       box-sizing: border-box;
     }
@@ -22,18 +21,18 @@
       padding: 15px 20px;
       display: flex;
       align-items: center;
-      gap: 8px; /* reduced gap from 20px to 8px */
+      gap: 4px; /* gap reduced to 4px */
       flex-wrap: wrap;
       text-align: center;
       justify-content: center;
     }
     .logo {
-      max-height: 150px; /* Reduced for mobile friendliness */
+      max-height: 150px;
       width: auto;
       flex-shrink: 0;
     }
     .header-text {
-      flex: 1 1 300px; /* grow and shrink with minimum width */
+      flex: 1 1 300px;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -153,7 +152,6 @@
       color: white;
       font-size: 14px;
     }
-    /* Products section styling */
     .products-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -188,8 +186,6 @@
       color: #333;
       flex-grow: 1;
     }
-
-    /* Responsive adjustments */
     @media (max-width: 768px) {
       header {
         flex-direction: column;
