--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       padding: 15px 20px;
       display: flex;
       align-items: center;
-      gap: 4px; /* gap reduced to 4px */
+      gap: 4px; /* tight gap */
       flex-wrap: wrap;
       text-align: center;
       justify-content: center;
     }
     .logo {
-      max-height: 150px;
+      max-height: 170px; /* increased size */
       width: auto;
       flex-shrink: 0;
     }
@@ -193,7 +193,7 @@
         padding: 20px 15px;
       }
       .logo {
-        max-height: 120px;
+        max-height: 140px; /* scale down proportionally on smaller screens */
       }
       .header-text h1 {
         font-size: 1.6rem;
