--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       padding: 15px 20px;
       display: flex;
       align-items: center;
-      gap: 4px; /* tight gap */
+      gap: 2px; /* reduced gap to 2px */
       flex-wrap: wrap;
       text-align: center;
       justify-content: center;
     }
     .logo {
-      max-height: 170px; /* increased size */
+      max-height: 170px;
       width: auto;
       flex-shrink: 0;
     }
@@ -193,7 +193,7 @@
         padding: 20px 15px;
       }
       .logo {
-        max-height: 140px; /* scale down proportionally on smaller screens */
+        max-height: 140px;
       }
       .header-text h1 {
         font-size: 1.6rem;
