--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       padding: 15px 20px;
       display: flex;
       align-items: center;
-      gap: 2px; /* reduced gap to 2px */
+      gap: 2px; /* tight gap */
       flex-wrap: wrap;
       text-align: center;
       justify-content: center;
@@ -71,159 +71,12 @@
       color: #003366;
       outline: none;
     }
-    .container {
-      max-width: 1000px;
-      margin: 20px auto;
-      padding: 0 15px 40px;
-      background: white;
-      border-radius: 6px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #004080;
-      border-bottom: 2px solid #004080;
-      padding-bottom: 4px;
-      margin-bottom: 15px;
-      font-size: 1.6rem;
-    }
-    section {
-      margin-bottom: 40px;
-    }
-    ul {
-      list-style-type: square;
-      padding-left: 20px;
-      margin: 0;
-    }
-    .portfolio-images {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 15px;
-    }
-    .portfolio-images img {
-      width: 100%;
-      height: auto;
-      border-radius: 6px;
-      box-shadow: 0 0 6px rgba(0,0,0,0.1);
-      display: block;
-    }
-    form label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-      font-size: 1rem;
-    }
-    form input, form textarea {
-      width: 100%;
-      padding: 10px 12px;
-      margin-top: 6px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-      font-size: 1rem;
-      font-family: inherit;
-      resize: vertical;
-    }
-    form button {
-      margin-top: 20px;
-      padding: 12px 20px;
-      background: #004080;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 1.1rem;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-      width: 100%;
-      max-width: 300px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    form button:hover,
-    form button:focus {
-      background: #00264d;
-      outline: none;
-    }
     footer {
       text-align: center;
       padding: 20px 15px;
       background: #003366;
       color: white;
       font-size: 14px;
-    }
-    .products-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 20px;
-      margin-top: 15px;
-    }
-    .product-item {
-      background: #f4f4f4;
-      border-radius: 8px;
-      padding: 15px;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      height: 100%;
-    }
-    .product-item img {
-      width: 100%;
-      height: auto;
-      border-radius: 6px;
-      margin-bottom: 10px;
-      flex-shrink: 0;
-    }
-    .product-item h3 {
-      margin: 10px 0 8px;
-      color: #004080;
-      font-size: 1.2rem;
-    }
-    .product-item p {
-      font-size: 1rem;
-      color: #333;
-      flex-grow: 1;
-    }
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        text-align: center;
-        padding: 20px 15px;
-      }
-      .logo {
-        max-height: 140px;
-      }
-      .header-text h1 {
-        font-size: 1.6rem;
-      }
-      .header-text p {
-        font-size: 0.95rem;
-      }
-    }
-    @media (max-width: 480px) {
-      nav {
-        flex-direction: column;
-        gap: 8px;
-        padding: 15px 10px;
-      }
-      nav a {
-        margin: 0;
-        padding: 12px 10px;
-        font-size: 1.1rem;
-        border-radius: 6px;
-      }
-      .container {
-        margin: 15px 10px 30px;
-        padding: 15px;
-      }
-      h2 {
-        font-size: 1.4rem;
-      }
-      form button {
-        max-width: 100%;
-      }
     }
   </style>
 </head>
@@ -239,86 +92,15 @@
 </header>
 
 <nav>
-  <a href="#home" tabindex="1">Home</a>
-  <a href="#services" tabindex="2">Services</a>
-  <a href="#products" tabindex="3">Products</a>
-  <a href="#about" tabindex="4">About</a>
-  <a href="#portfolio" tabindex="5">Portfolio</a>
-  <a href="#contact" tabindex="6">Contact</a>
+  <a href="services.html" tabindex="1">Services</a>
+  <a href="products.html" tabindex="2">Products</a>
+  <a href="about.html" tabindex="3">About</a>
+  <a href="portfolio.html" tabindex="4">Portfolio</a>
 </nav>
 
 <div class="container">
-
-  <section id="home" tabindex="7">
-    <h2>Welcome</h2>
-    <p>Providing quality craftsmanship and reliable home improvement services in Naic, Cavite. Whether you need custom woodworking, welding, electrical installations, or construction planning, we are your trusted partner.</p>
-  </section>
-
-  <section id="services" tabindex="8">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Custom Woodworking: Furniture, cabinets, shelves</li>
-      <li>Welding & Metal Fabrication: Gates, grills, furniture</li>
-      <li>Electrical Installation & Maintenance: Lighting, outlets, panels</li>
-      <li>Construction Planning & Design: Drafting, consultation, project management</li>
-    </ul>
-  </section>
-
-  <section id="products" tabindex="9">
-    <h2>Our Products</h2>
-    <div class="products-grid">
-      <div class="product-item">
-        <img src="https://via.placeholder.com/300x200?text=Custom+Wooden+Table" alt="Custom Wooden Table" />
-        <h3>Custom Wooden Table</h3>
-        <p>Handcrafted tables made from premium wood, tailored to your design preferences.</p>
-      </div>
-      <div class="product-item">
-        <img src="https://via.placeholder.com/300x200?text=Welded+Gate" alt="Welded Gate" />
-        <h3>Welded Gates</h3>
-        <p>Durable and stylish gates designed to enhance your property’s security and curb appeal.</p>
-      </div>
-      <div class="product-item">
-        <img src="https://via.placeholder.com/300x200?text=LED+Lighting+Installation" alt="LED Lighting Installation" />
-        <h3>LED Lighting Installation</h3>
-        <p>Energy-efficient lighting solutions that brighten your home or workspace.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="about" tabindex="10">
-    <h2>About AP Electrical</h2>
-    <p>With years of hands-on experience in woodworking, welding, electrical works, and construction planning, AP Electrical and Construction Services offers personalized and quality services tailored to your home needs. Committed to professionalism and customer satisfaction.</p>
-  </section>
-
-  <section id="portfolio" tabindex="11">
-    <h2>Portfolio</h2>
-    <div class="portfolio-images">
-      <img src="https://via.placeholder.com/400x300?text=Woodworking+Project" alt="Woodworking Project" />
-      <img src="https://via.placeholder.com/400x300?text=Welding+Project" alt="Welding Project" />
-      <img src="https://via.placeholder.com/400x300?text=Electrical+Installation" alt="Electrical Installation" />
-      <img src="https://via.placeholder.com/400x300?text=Construction+Plans" alt="Construction Plans" />
-    </div>
-  </section>
-
-  <section id="contact" tabindex="12">
-    <h2>Contact Us</h2>
-    <form action="mailto:sales.eices@gmail.com" method="post" enctype="text/plain" novalidate>
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required placeholder="Your full name" />
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required placeholder="example@domain.com" />
-
-      <label for="phone">Phone</label>
-      <input type="tel" id="phone" name="phone" placeholder="Optional" />
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" rows="5" required placeholder="Write your message here"></textarea>
-
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
-
+  <h2>Welcome</h2>
+  <p>Providing quality craftsmanship and reliable home improvement services in Naic, Cavite. Whether you need custom woodworking, welding, electrical installations, or construction planning, we are your trusted partner.</p>
 </div>
 
 <footer>
