--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
       padding: 8px 15px;
       text-decoration: none;
       font-weight: bold;
-      border-radius: 4px;
       transition: background-color 0.3s ease, color 0.3s ease;
       white-space: nowrap;
     }
@@ -78,6 +77,14 @@
       color: white;
       font-size: 14px;
     }
+    .container {
+      margin: 20px auto;
+      padding: 20px;
+      max-width: 1000px;
+      background: white;
+      border-radius: 6px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
@@ -92,15 +99,25 @@
 </header>
 
 <nav>
-  <a href="services.html" tabindex="1">Services</a>
-  <a href="products.html" tabindex="2">Products</a>
-  <a href="about.html" tabindex="3">About</a>
-  <a href="portfolio.html" tabindex="4">Portfolio</a>
+  <a href="index.html">Home</a>
+  <a href="services.html">Services</a>
+  <a href="products.html">Products</a>
+  <a href="about.html">About</a>
+  <a href="portfolio.html">Portfolio</a>
 </nav>
 
 <div class="container">
-  <h2>Welcome</h2>
-  <p>Providing quality craftsmanship and reliable home improvement services in Naic, Cavite. Whether you need custom woodworking, welding, electrical installations, or construction planning, we are your trusted partner.</p>
+  <h2>Welcome to AP Electrical and Construction Services</h2>
+  <p>We provide reliable and high-quality services in the fields of woodworking, welding, electrical installation, and construction design. Whether you're looking to install new lighting or build custom furniture, we are your trusted partner.</p>
+
+  <h3>Our Expertise</h3>
+  <ul>
+    <li>Custom Woodworking</li>
+    <li>Welding & Metal Fabrication</li>
+    <li>Electrical Installations & Maintenance</li>
+    <li>Construction Planning & Design</li>
+  </ul>
+  <p>Explore our services, browse our products, or check out our portfolio to see the quality of our work!</p>
 </div>
 
 <footer>
