--- a/services.html
+++ b/services.html
@@ -36,11 +36,16 @@
       border-radius: 6px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
+    .logo {
+      max-height: 150px;
+      width: auto;
+    }
   </style>
 </head>
 <body>
 
 <header>
+  <img src="Logo new.jpg" alt="AP Electrical Logo" class="logo" />
   <h1>AP Electrical and Construction Services</h1>
   <p>Woodworking, Welding Works, Electrical Installation / Troubleshooting & Construction Design / Planning</p>
 </header>
