--- a/products.html
+++ b/products.html
@@ -36,22 +36,16 @@
       border-radius: 6px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    .product-item {
-      margin-bottom: 20px;
-    }
-    .product-item img {
-      width: 100%;
-      max-width: 300px;
-      margin-bottom: 10px;
-    }
-    .product-item h3 {
-      color: #004080;
+    .logo {
+      max-height: 150px;
+      width: auto;
     }
   </style>
 </head>
 <body>
 
 <header>
+  <img src="Logo new.jpg" alt="AP Electrical Logo" class="logo" />
   <h1>AP Electrical and Construction Services</h1>
   <p>Woodworking, Welding Works, Electrical Installation / Troubleshooting & Construction Design / Planning</p>
 </header>
