--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,7 @@
 <body>
 
 <header>
+  <img src="Logo new.jpg" alt="AP Electrical Logo" class="logo" />
   <h1>AP Electrical and Construction Services</h1>
   <p>Woodworking, Welding Works, Electrical Installation / Troubleshooting & Construction Design / Planning</p>
 </header>
