--- a/products.html
+++ b/products.html
@@ -10,23 +10,66 @@
       color: #333;
       background: #f9f9f9;
     }
-    header, footer {
+    header {
       background: #004080;
       color: white;
-      text-align: center;
-      padding: 15px;
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+      text-align: left;
+      justify-content: flex-start;
+    }
+    .logo {
+      max-height: 150px;
+      width: auto;
+    }
+    .header-text {
+      flex: 1 1 300px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      min-width: 250px;
+    }
+    .header-text h1 {
+      font-size: 1.8rem;
+      margin: 0 0 6px 0;
+      line-height: 1.1;
+    }
+    .header-text p {
+      margin: 0;
+      font-size: 1rem;
+      line-height: 1.3;
     }
     nav {
       background: #003366;
       display: flex;
       justify-content: center;
-      padding: 10px 0;
+      flex-wrap: wrap;
+      padding: 10px 5px;
+      gap: 10px;
     }
     nav a {
       color: white;
-      padding: 10px;
+      padding: 8px 15px;
       text-decoration: none;
       font-weight: bold;
+      transition: background-color 0.3s ease, color 0.3s ease;
+      white-space: nowrap;
+    }
+    nav a:hover,
+    nav a:focus {
+      background-color: #ffcc00;
+      color: #003366;
+      outline: none;
+    }
+    footer {
+      text-align: center;
+      padding: 20px 15px;
+      background: #003366;
+      color: white;
+      font-size: 14px;
     }
     .container {
       margin: 20px auto;
@@ -36,18 +79,16 @@
       border-radius: 6px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    .logo {
-      max-height: 150px;
-      width: auto;
-    }
   </style>
 </head>
 <body>
 
 <header>
   <img src="Logo new.jpg" alt="AP Electrical Logo" class="logo" />
-  <h1>AP Electrical and Construction Services</h1>
-  <p>Woodworking, Welding Works, Electrical Installation / Troubleshooting & Construction Design / Planning</p>
+  <div class="header-text">
+    <h1>AP Electrical and Construction Services</h1>
+    <p>Woodworking, Welding Works, Electrical Installation / Troubleshooting & Construction Design / Planning</p>
+  </div>
 </header>
 
 <nav>
