--- a/services.html
+++ b/services.html
@@ -16,14 +16,14 @@
       padding: 15px 20px;
       display: flex;
       align-items: center;
-      gap: 20px;
+      gap: 20px; /* space between logo and text */
       flex-wrap: wrap;
       text-align: left;
       justify-content: flex-start;
     }
     .logo {
-      max-height: 150px;
-      width: auto;
+      max-height: 150px;  /* fixed size for logo */
+      width: auto;  /* maintain aspect ratio */
     }
     .header-text {
       flex: 1 1 300px;
