--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
       margin: 20px auto;
       padding: 20px;
       max-width: 1000px;
+      width: 100%;
       background: white;
       border-radius: 6px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-sizing: border-box;
     }
   </style>
 </head>
