--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portfolio - AP Electrical</title>
   <style>
-    body {
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
       font-family: Arial, sans-serif;
       color: #333;
       background: #f9f9f9;
     }
+    header, nav {
+      width: 100%;
+      margin: 0;
+      padding-left: 20px;
+      padding-right: 20px;
+      box-sizing: border-box;
+    }
     header {
-      background: #004080;
+      background-color: #004080;
       color: white;
       padding: 15px 20px;
       display: flex;
@@ -43,7 +53,7 @@
       line-height: 1.3;
     }
     nav {
-      background: #003366;
+      background-color: #003366;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
@@ -64,20 +74,15 @@
       color: #003366;
       outline: none;
     }
-    footer {
-      text-align: center;
-      padding: 20px 15px;
-      background: #003366;
-      color: white;
-      font-size: 14px;
-    }
     .container {
       margin: 20px auto;
       padding: 20px;
       max-width: 1000px;
+      width: 100%;
       background: white;
       border-radius: 6px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-sizing: border-box;
     }
     .portfolio-images {
       display: grid;
@@ -89,6 +94,13 @@
       height: auto;
       border-radius: 6px;
       box-shadow: 0 0 6px rgba(0,0,0,0.1);
+    }
+    footer {
+      text-align: center;
+      padding: 20px 15px;
+      background: #003366;
+      color: white;
+      font-size: 14px;
     }
   </style>
 </head>
