--- a/index.html
+++ b/index.html
@@ -8,27 +8,35 @@
     *, *::before, *::after {
       box-sizing: border-box;
     }
-    body {
-      font-family: Arial, sans-serif;
+    html, body {
       margin: 0;
-      line-height: 1.6;
+      padding: 0;
+      width: 100%;
+      font-family: Arial, sans-serif;
       color: #333;
       background: #f9f9f9;
     }
+    header, nav {
+      width: 100%;
+      margin: 0;
+      padding-left: 20px;
+      padding-right: 20px;
+      box-sizing: border-box;
+    }
     header {
-      background: #004080;
+      background-color: #004080;
       color: white;
       padding: 15px 20px;
       display: flex;
       align-items: center;
-      gap: 20px;  /* space between logo and text */
+      gap: 20px;
       flex-wrap: wrap;
       text-align: left;
       justify-content: flex-start;
     }
     .logo {
-      max-height: 150px;  /* fixed size for logo */
-      width: auto;  /* maintain aspect ratio */
+      max-height: 150px;
+      width: auto;
     }
     .header-text {
       flex: 1 1 300px;
@@ -48,7 +56,7 @@
       line-height: 1.3;
     }
     nav {
-      background: #003366;
+      background-color: #003366;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
@@ -69,13 +77,6 @@
       color: #003366;
       outline: none;
     }
-    footer {
-      text-align: center;
-      padding: 20px 15px;
-      background: #003366;
-      color: white;
-      font-size: 14px;
-    }
     .container {
       margin: 20px auto;
       padding: 20px;
@@ -84,6 +85,15 @@
       background: white;
       border-radius: 6px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    footer {
+      height: 50px;
+      line-height: 50px;
+      text-align: center;
+      background: #003366;
+      color: white;
+      font-size: 14px;
+      padding: 0 15px;
       box-sizing: border-box;
     }
   </style>
